--- a/main.yml
+++ b/main.yml
@@ -596,7 +596,11 @@ openshift:
   deployment_repo: https://github.com/RedHatInsights/uhc-portal-frontend-deploy.git
   productId: Red Hat Openshift Cluster Manager
   frontend:
-    module: openshift#./RootApp
+    module:
+      appName: openshift
+      scope: openshift
+      module: ./RootApp
+      group: openshift
     title: OpenShift
     paths:
       - /openshift
