--- a/main.yml
+++ b/main.yml
@@ -395,6 +395,10 @@ frontend-assets:
 
 image-builder:
   title: Image Builder
+  api:
+    versions:
+      - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/image-builder-frontend-build
   permissions:
     method: apiRequest
@@ -403,6 +407,11 @@ image-builder:
         matcher: isNotEmpty
   frontend:
     section: operations
+    module:
+      appName: image-builder
+      scope: image_builder
+      module: ./RootApp
+    title: Image Builder
     paths:
       - /insights/image-builder
   source_repo: https://github.com/osbuild/image-builder-frontend
