Add new Downloads page to OCM left navigation
https://qaprodauth.cloud.redhat.com/beta/openshift/downloads is a new page, adding here similar to #696.
(https://issues.redhat.com/browse/SDA-4211)

--- a/main.yml
+++ b/main.yml
@@ -620,6 +620,9 @@ openshift:
       - id: releases
         title: Releases
         group: openshift
+      - id: downloads
+        title: Downloads
+        group: openshift
       - id: ocp-advisor
         group: insights
       - id: subscriptions
