add cloud tutorials to nav

--- a/main.yml
+++ b/main.yml
@@ -223,6 +223,10 @@ cloud-tutorials:
     versions:
       -v1
   frontend:
+    module:
+      appName: cloud-tutorials
+      scope: cloudTutorials
+      module: ./RootApp
     title: Cloud Tutorials
     paths:
       - /mosaic/cloud-tutorials
